--- a/sections/onetimesig.tex
+++ b/sections/onetimesig.tex
@@ -41,15 +41,15 @@ Such aggregated signatures should still \emph{strongly} verify with high probabi
 
 \begin{definition}[Probabilistic Homomorphism]
   Let $\hots$ be a one-time signature scheme over a ring $\ring$ with public key space $\modopk$ and signatures from $\modsig$.
-  Let $\rho,\varepsilon \in \NN$ and $W\subseteq \ring$.
-  $\hots$ is $(\rho,W,\varepsilon)$-probabilistically homomorphic, if 
+  Let $\rho \in \NN$, error bound $0\leq \errorbound \leq 1$ and $W\subseteq \ring$.
+  $\hots$ is $(\rho,W,\errorbound)$-probabilistically homomorphic, if 
   for all security parameters $\secpar\in\NN$, number of aggregated signatures $\ell\in[\rho]$, parameters $\params \gets \setup(\secparam)$, public keys $\opk^i \in \modopk$, messages $m\in\bin^*$ and signatures $\vec{\sigma}^i\in\modsig$ with $\iverify(\params,\opk^i,m,\vec{\sigma}^i)$ it holds that
   \[
     \Pr\mleft[
       w^1,\dots,w^\ell\gets W
-      :
+      \colon
       \sverify(\params,\sum_{i=1}^{\ell}w^i\cdot\opk^i,m,\sum_{i=1}^{\ell}w^i\cdot\vec{\sigma}^i) = 1
-    \mright]\geq 1-2^{-\varepsilon}\enspace.
+    \mright]\geq 1-\errorbound\enspace.
   \]
 \end{definition}
 
@@ -77,16 +77,16 @@ The following definition of a multi-user version of (one-time) existential unfor
     \Pr\mleft[
       \begin{aligned}
       \params \gets \setup(\secparam);\\
-      \forall i \in [T-1]\ldotp (\osk_i,\opk_i) \gets \kgen(\params);\\
-      (i^*,m^*,\sigma^*,w^*) \gets \adv^{\widetilde\sign(\cdot,\cdot)}(\params,\opk_0,\dots,\opk_{T-1});\\
+      \forall i \in [T]\ldotp (\osk_i,\opk_i) \gets \kgen(\params);\\
+      (i^*,m^*,\sigma^*,w^*) \gets \adv^{\widetilde\sign(\cdot,\cdot)}(\params,\opk_1,\dots,\opk_{T})\\
 %      \sigma \gets \sign(\params,\osk,m);\\
 %      (m^*,\sigma^*,w_0^*,w_1^*) \gets \adv(\sigma)\\
-      \end{aligned}:
+      \end{aligned}\colon
       \begin{aligned}
-      \wverify(\params,w^*\cdot\opk_{i^*},m^*,\sigma^*) = 1\\
-      \land m^*\not\in Q_{i^*} \land \abs{Q_{i^*}}\leq 1 \land w^* \in W'
+      &\wverify(\params,w^*\cdot\opk_{i^*},m^*,\sigma^*) = 1\\
+      {}\land{}& m^*\not\in Q_{i^*} \land \abs{Q_{i^*}}\leq 1 \land w^* \in W'
       \end{aligned}
-    \mright]\leq \negl,
+    \mright]\leq \negl\enspace,
   \]
   where the oracle $\widetilde\sign(\cdot,\cdot)$ is defined as $\widetilde\sign(i,m) := \sign(\osk_i,m)$ and $Q_i$ denotes the set of messages for which a signing query with index $i$ has been made.
 \end{definition}
@@ -103,8 +103,8 @@ The following definition of a multi-user version of (one-time) existential unfor
   \procedure{$\kgen(\params)$}{
     \vec{s}_0 \gets \ball{\varphi}{q'}^\otspkkeylen\\
     \vec{s}_1 \gets \ball{\varphi\cdot\alpha_H}{q'}^{\otspkkeylen}\\
-    v_0 := \vec{a}^\intercal\cdot \vec{s}_0\\
-    v_1 := \vec{a}^\intercal\cdot \vec{s}_1\\
+    v_0 := \vec{a}^\transpose\cdot \vec{s}_0\\
+    v_1 := \vec{a}^\transpose\cdot \vec{s}_1\\
     \pcreturn ((\vec{s}_0,\vec{s}_1)(v_0,v_1))
   }
   \pchspace
@@ -134,14 +134,14 @@ The following definition of a multi-user version of (one-time) existential unfor
     \pcparse \opk \pcas (v_0,v_1)\\
     \pcif \norm{\vec{\sigma}} > \beta'\\
     \quad \pcreturn 0\\
-    \pcif \vec{a}^\intercal\cdot \vec{\sigma} \neq v_0\cdot H(m) + v_1\\
+    \pcif \vec{a}^\transpose\cdot \vec{\sigma} \neq v_0\cdot H(m) + v_1\\
     \quad \pcreturn 0\\
     \pcreturn 1
   }
 \end{pchstack}
 \end{pcvstack}
 \caption{%
-Description of our key-homomorphic one-time signature scheme.
+Description of our key-homomorphic one-time signature scheme $\otschip$ from \autoref{def:our_ots}.
 $H$ is a collision-resistant hash function mapping bit-strings to $\tern_{\alpha_H}$.
 Our key space is $\modopk = \ring_{q'}^{2\otspkkeylen}$.
 The signature space is $\modsig = \ring_{q'}^\otspkkeylen$.
@@ -155,11 +155,27 @@ Specifically, the components of the secret keys are allowed to have a larger inf
 This is beneficial, because the security proof partially relies on fact that the function mapping secret keys to public keys and signatures is highly compressing.
 With a larger secret key-space the compression ratio increases, allowing us to reduce the size of other parameters, ultimately decreasing the size of the signatures.
 
+\begin{definition}\label{def:our_ots}
+Let $n, q', \alpha_H, \varphi, \otspkkeylen, \beta_\sigma$ be integers and $H$ be a hash function mapping bit strings to $\tern_{\alpha_H}$.
+Let $\ring = \defring$ and $\ring_{q'} = \defringqq$.
+% 
+% \smallskip\noindent
+We define $\otschip = (\setup, \kgen, \sign,\allowbreak \iverify, \sverify, \wverify)$ as the key-homomorphic one-time scheme over $\ring$ as in \autoref{fig:otsconstruction}.
+Its public key space is $\modopk = \ring_{q'}^{2\gamma}$ and its signature space is $\modsig = \ring_{q'}^\gamma$.
+\end{definition}
+
+
 \begin{theorem}\label{theo:kots}
-Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\delta$, $\varphi$, $\otspkkeylen$, $\rho$, $\beta_\sigma$, $n$, $q'$ be integers such that $q'$ is prime and $q' > 16\alpha_w\alpha_H\varphi$, $n$ is a power of two, $2^{2\secpar}\leq \tern_{\alpha_H} \leq 2^{2\secpar+\delta}$, $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\otspkkeylen)\cdot\ln2}$, and $\otspkkeylen\geq((3\secpar+\delta)/n+\log_2q')\log^{-1}_2(\varphi+\tfrac{1}{2})$.
-Let $H\colon\; \bin^* \to \tern_{\alpha_H}$ be a hash function.
+Let $\secpar, \alpha_w$, $\alpha_H$, $\varphi$, $\otspkkeylen$, $\rho$, $\beta_\sigma$, $n$, $q'$ be integers and $0 < \errorbound < 1$ such that $q'$ is prime and $q' > 16\alpha_w\alpha_H\varphi$, $n$ is a power of two and there exists $\delta$ with
+\begin{align*}
+2^{2\secpar} & \leq \abs{\tern_{\alpha_H}} \leq 2^{2\secpar+\delta},\\
+\beta_\sigma & \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\log_2\tfrac{1}{\errorbound}+1+\log_2n\otspkkeylen)\cdot\ln2}\\
+\otspkkeylen & \geq((3\secpar+\delta)/n+\log_2q')\log^{-1}_2(\varphi+\tfrac{1}{2})\enspace.
+\end{align*}
+Let $H\colon\, \bin^* \to \tern_{\alpha_H}$ be a hash function.
 Let $W' = \{w_0-w_1\mid w_0,w_1\in\tern_{\alpha_w} \land w_0\neq w_1\}$.
-If the $\sis_{\ring,q',\otspkkeylen,2\beta_\sigma+4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant, then the construction from~\autoref{fig:otsconstruction} is an individually correct, $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic, robustly homomorphic KOTS that is $W'$-multi-user existentially unforgeable under rerandomized keys.
+If the $\sis_{\ring,q',\otspkkeylen,2\beta_\sigma+4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant,
+then the construction $\otschip$ from \autoref{fig:otsconstruction} is an individually correct, $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic, robustly homomorphic KOTS that is $W'$-multi-user existentially unforgeable under rerandomized keys.
 \end{theorem}
 \begin{proof}
 The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_correct}, \autoref{lem:kots_homomorphic}, and \autoref{lem:kots_sis}.
@@ -168,18 +184,18 @@ The theorem follows from \autoref{lem:kots_ind_correct}, \autoref{lem:kots_corre
 
 The following four lemmas state that our construction satisfies the desired homomorphic properties and that it is unforgeable.
 \begin{lemma}\label{lem:kots_ind_correct}
-Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\otspkkeylen$, $\rho$, $\beta_\sigma,n,q'$ be positive integers, such that $n$ is a power of two, $q'$ is prime.
-  Let $\ring_{q'}$ be the polynomial ring $\ZZ_{q'}[x]/\langle x^n+1\rangle$.
-Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
-  Then the construction from \autoref{fig:otsconstruction} is a individually correct one time signature scheme.
+Let $\secpar, \alpha_w$, $\alpha_H$, $\varphi$, $\otspkkeylen$, $\rho$, $\beta_\sigma,n,q'$ be positive integers, such that $n$ is a power of two, $q'$ is prime.
+  Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
+Let $H\colon\, \bin^* \to \tern_{\alpha_H}$ be a hash function.
+  Then $\otschip$ as in \autoref{fig:otsconstruction} is a individually correct one time signature scheme.
 \end{lemma}
 \begin{proof}
   Let $\params \gets \setup(\secparam)$, $(\osk,\opk) \gets \kgen(\params)$, $m\in\bin^*$ and $\vec{\sigma} \gets \sign(\params,\osk,m)$ be arbitrary.
   We first observe that the check on the \emph{value} of the signature goes through, as
   \begin{align*}
-    \vec{a}^\intercal\vec{\sigma}
-    ={}&\vec{a}^\intercal(\vec{s}_0\cdot H(m) + \vec{s}_1)\tag{Def. of $\sign$}\\
-    ={}&\vec{a}^\intercal\vec{s}_0\cdot H(m) + \vec{a}^\intercal\vec{s}_1 \tag{Distributivity}\\
+    \vec{a}^\transpose\vec{\sigma}
+    ={}&\vec{a}^\transpose(\vec{s}_0\cdot H(m) + \vec{s}_1)\tag{Def. of $\sign$}\\
+    ={}&\vec{a}^\transpose\vec{s}_0\cdot H(m) + \vec{a}^\transpose\vec{s}_1 \tag{Distributivity}\\
     ={}&v_0\cdot H(m) + v_1. \tag{Def. of $\kgen$}
   \end{align*}
   The signature also does not violate the norm bound, as
@@ -196,10 +212,13 @@ Let $H : \bin^* \to \tern_{\alpha_H}$ be a hash function.
 
 
 \begin{lemma}\label{lem:kots_correct}
-Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\otspkkeylen$, $\rho$, $\beta_\sigma$, $n$, $q'$ be positive integers, such that \[\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\otspkkeylen)\cdot\ln2}.\]
-  Let $\ring_{q'}$ be the polynomial ring $\ZZ_{q'}[x]/\langle x^n+1\rangle$.
-  Let $H\colon\; \bin^* \to \tern_{\alpha_H}$ be a hash function.
-  Then the construction from \autoref{fig:otsconstruction} is a $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic one time signature scheme.
+Let $\secpar, \alpha_w$, $\alpha_H$, $\varphi$, $\otspkkeylen$, $\rho$, $\beta_\sigma$, $n$, $q'$ be positive integers and $0 < \errorbound < 1$, such that 
+\[
+\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\log_2\tfrac{1}{\errorbound}+1+\log_2n\otspkkeylen)\cdot\ln2} \enspace.
+\]
+  Let $\ring_{q'}$ be the polynomial ring $\defringqq$.
+  Let $H\colon\, \bin^* \to \tern_{\alpha_H}$ be a hash function.
+  Then $\otschip$ as in \autoref{fig:otsconstruction} is a $(\rho,\tern_{\alpha_w},\varepsilon)$-probabilistically homomorphic one time signature scheme.
 \end{lemma}
 
 \begin{proof}
@@ -207,31 +226,31 @@ Let $\secpar, \varepsilon, \alpha_w$, $\alpha_H$, $\varphi$, $\otspkkeylen$, $\r
   
   We first note that even for arbitrary $w_1,\dots,w_\ell \in \tern_\alpha$ it holds that
   \begin{align*}
-    \vec{a}^\intercal\cdot \sum_{i=1}^{\ell-1}w^i\cdot\vec{\sigma}^i
-    ={}&\sum_{i=1}^{\ell}w^i\cdot\vec{a}^\intercal\vec{\sigma}^i \tag{Distributivity}\\
+    \vec{a}^\transpose\cdot \sum_{i=1}^{\ell-1}w^i\cdot\vec{\sigma}^i
+    ={}&\sum_{i=1}^{\ell}w^i\cdot\vec{a}^\transpose\vec{\sigma}^i \tag{Distributivity}\\
     ={}&\sum_{i=1}^{\ell}w^i\cdot(v^i_0\cdot H(m)+v^i_1) \tag{Def. of $\iverify$}\\
 %    ={}&\sum_{i=1}^{\ell}w^iv^i_0\cdot H(m)+ \sum_{i=1}^{\ell}w^iv^i_1 \tag{Distributivity}\\
     ={}&\Bigl(\sum_{i=1}^{\ell}w^iv^i_0\Bigr)\cdot H(m)+ \Bigl(\sum_{i=1}^{\ell}w^iv^i_1\Bigr) \tag{Distributivity}.
   \end{align*}
-  Therefore, it only remains to verify that the norm-check goes through with sufficient probability,
-  i.e., that
+  Therefore, it only remains to verify that the norm-check goes through with sufficient probability.
+  That means we need to show that
   \[
     P\coloneqq \Pr\mleft[
       w^1,\dots,w^\ell\gets \tern_{\alpha_w}
       \colon
-      \Bigl\Vert\sum_{i=1}^{\ell} w^i\cdot\vec{\sigma}^i\Bigr\Vert \leq \beta_\sigma\mright] \leq 2^{-\varepsilon}\enspace.
+      \Bigl\Vert\sum_{i=1}^{\ell} w^i\cdot\vec{\sigma}^i\Bigr\Vert > \beta_\sigma\mright] \leq \errorbound \enspace.
   \]
-  For each individual $\vec{\sigma}^i$ it holds by the definition of $\iverify$ that $\norm{\vec{\sigma}^i} \leq 2\varphi\alpha_H$.
-  What we need to show here is a bound for vectors from $\ring^\otspkkeylen$.
+  For each individual $\vec{\sigma}^i$, it holds by the definition of $\iverify$ that $\norm{\vec{\sigma}^i} \leq 2\varphi\alpha_H$.
+  What we need show here is a norm bound in $\ring^\otspkkeylen$, i.e. the bound holds even if we do not reduce modulo $q'$.
   Using \autoref{lem:normgrowth} with $\zeta = \tfrac{\beta_\sigma}{2\varphi\alpha_H}$ and taking a union bound over all $\otspkkeylen$ entries immediately gives
   \begin{align}\label{eq:appliedMcD}
    P \leq \otspkkeylen\cdot 2n\exp\Bigl(-\frac{\beta_\sigma^2}{8\varphi^2\alpha_H^2\alpha_w\ell}\Bigr) \leq 2\otspkkeylen n\exp\Bigl(-\frac{\beta_\sigma^2}{8\varphi^2\alpha_H^2\alpha_w\rho}\Bigr)\enspace.
   \end{align}
-Our condition $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\otspkkeylen)\cdot\ln2}$ is chosen as to be equivalent to
+Our condition $\beta_\sigma \geq 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\log_{2}\tfrac{1}{\errorbound}  + 1+\log_2n\otspkkeylen)\cdot\ln2}$ is chosen as to be equivalent to
 \[
- \frac{\beta_\sigma^2}{8\varphi^2\alpha^2_H\alpha_w\rho} \geq \ln\Bigl( 2\otspkkeylen n \cdot 2^\varepsilon \Bigr)\enspace.
+ \frac{\beta_\sigma^2}{8\varphi^2\alpha^2_H\alpha_w\rho} \geq \ln\Bigl( \frac{2\otspkkeylen n}{\errorbound} \Bigr)\enspace.
 \]
-Plugging this into \autoref{eq:appliedMcD} directly gives $P \leq 2^{-\varepsilon}$.
+Plugging this into \autoref{eq:appliedMcD} directly gives $P \leq \errorbound$.
 %   To bound this probability, consider that the norm-bound is violated iff the absolute value of at least one of the $n\otspkkeylen$ coefficients in $\sum_{i=1}^{\ell} w^i\cdot\vec{\sigma}^i$ is greater than $\beta_\sigma$.
 %   By a union bound it is thus sufficient to show that each individual coefficient violates the bound with probability at most $2^{-\varepsilon}/(n\otspkkeylen)$
 %   
@@ -251,15 +270,15 @@ Plugging this into \autoref{eq:appliedMcD} directly gives $P \leq 2^{-\varepsilo
 %     ={}& 2\cdot\exp(-(\varepsilon+1+\log_2n\otspkkeylen)\cdot\ln2)\\
 %     ={}& 2^{-\varepsilon-\log_2n\otspkkeylen} = 2^{-\varepsilon}\cdot \frac{1}{n\otspkkeylen}
 %   \end{align*}
-It thus follows that with probability at least $1-2^\varepsilon$ the strong verification algorithm outputs $1$ as required.
+It thus follows that with probability at least $1-\errorbound$ the strong verification algorithm outputs $1$ as required.
 \end{proof}
 
 
 \begin{lemma}\label{lem:kots_homomorphic}
   Let $\secpar, \alpha_H$, $\varphi$, $\otspkkeylen$, $\beta_\sigma,q',n$ be positive integers.
-  Let $\ring_{q'}$ be the polynomial ring $\ZZ_{q'}[x]/\langle x^n+1\rangle$.
-  Let $H\colon\; \bin^* \to \tern_{\alpha_H}$ be a hash function.
-  Then the construction from \autoref{fig:otsconstruction} is robustly homomorphic.
+  As usual, let $\ring_{q'}$ be the polynomial ring $\defringqq$.
+  Let $H\colon\, \bin^* \to \tern_{\alpha_H}$ be a hash function.
+  Then $\otschip$ as in \autoref{fig:otsconstruction} is robustly homomorphic.
 \end{lemma}
 
 \begin{proof}
@@ -274,8 +293,8 @@ It thus follows that with probability at least $1-2^\varepsilon$ the strong veri
   thus the norm check goes through.
   It remains to verify that the second check also goes through.
   \begin{align*}
-     \vec{a}^\intercal\cdot (\vec{\sigma}^0-\vec{\sigma}^1)
-    ={}& \vec{a}^\intercal\cdot \vec{\sigma}^0- \vec{a}^\intercal\cdot\vec{\sigma}^1\\
+     \vec{a}^\transpose\cdot (\vec{\sigma}^0-\vec{\sigma}^1)
+    ={}& \vec{a}^\transpose\cdot \vec{\sigma}^0- \vec{a}^\transpose\cdot\vec{\sigma}^1\\
     ={}& (v^0_0\cdot H(m) + v^0_1) - (v^1_0\cdot H(m) + v^1_1)\tag{Def of $\sverify$}\\
     ={}& (v^0_0-v^1_0)\cdot H(m) + (v^0_1-v^1_1)\enspace.
   \end{align*}
@@ -285,15 +304,16 @@ It thus follows that with probability at least $1-2^\varepsilon$ the strong veri
 
 
 \begin{lemma}\label{lem:kots_sis}
-  Let $n,\otspkkeylen,q',\alpha_H,\alpha_w,\delta,\secpar$ be positive integers with $q'$ prime and $n$ a power of two, such that $q' > 16 \alpha_w \alpha_H\varphi$, $\otspkkeylen\geq((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$, and $2^{2\secpar} \leq \abs{\tern_{\alpha_H}} \leq 2^{2\secpar + \delta}$.
-  Let $H\colon\; \bin^* \to \tern_{\alpha_H}$ be a hash function.
-  If the $\sis_{\ring,q',\otspkkeylen,2\beta_\sigma + 4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant, then the construction from \autoref{fig:otsconstruction} is existentially unforgeable under rerandomized keys.
+  Let $n,\otspkkeylen,q',\alpha_H,\alpha_w,\secpar$ be positive integers with $q'$ prime and $n$ a power of two, with $q' > 16 \alpha_w \alpha_H\varphi$.
+%   $\otspkkeylen\geq((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$, and $2^{2\secpar} \leq \abs{\tern_{\alpha_H}} \leq 2^{2\secpar + \delta}$.
+  Let $H\colon\, \bin^* \to \tern_{\alpha_H}$ be a hash function.
+  If the $\sis_{\ring,q',\otspkkeylen,2\beta_\sigma + 4\alpha_w\alpha_H\varphi}$ problem is hard and $H$ is collision resistant, then $\otschip$ as in \autoref{fig:otsconstruction} is existentially unforgeable under rerandomized keys.
 \end{lemma}
 
 \begin{proof}
   Let $\adv$ be an arbitrary adversary against the multi-user $W'$-existentially unforgeability under rerandomized keys with success probability $\nu(\secpar)$.
   We construct an algorithm $\sisadvkots$ that solves $\sis_{\ring,q',\otspkkeylen,2\beta_\sigma + 4\alpha_w\alpha_H\varphi}$ as follows.
-  Given $\vec{a}\in\ring_{q'}^\otspkkeylen$, $\sisadvkots$ honestly chooses secret keys $(\vec{s}^i_0,\vec{s}^i_1) \in \ball{\varphi}{q'}^\otspkkeylen\times \ball{\varphi\alpha_H}{q'}^\otspkkeylen$ uniformly at random for $i\in[T-1]$ and invokes $\adv$ on public keys $(v^i_0,v^i_1)$, with $v^i_b := \vec{a}^\intercal\cdot s^i_b$.
+  Given $\vec{a}\in\ring_{q'}^\otspkkeylen$, $\sisadvkots$ honestly chooses secret keys $(\vec{s}^i_0,\vec{s}^i_1) \in \ball{\varphi}{q'}^\otspkkeylen\times \ball{\varphi\alpha_H}{q'}^\otspkkeylen$ uniformly at random for $i\in[T]$ and invokes $\adv$ on public keys $(v^i_0,v^i_1)$, with $v^i_b := \vec{a}^\transpose\cdot s^i_b$.
   Whenever $\adv$ sends a signing query $(i,m)$, $\sisadvkots$ will respond with the honestly computed signature $\vec{\sigma}:=\vec{s}^i_0\cdot H(m)+ \vec{s}^i_1$.
   Eventually $\adv$ outputs a candidate forgery $(i^*,m^*,\vec{\sigma}^*,w^*)$ and $\sisadvkots$ will compute a signature on the same message as $\vec{\sigma}' := w^*\cdot\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1$.
   It then outputs $\vec{\sigma}^*-\vec{\sigma}'$.
@@ -302,9 +322,9 @@ It thus follows that with probability at least $1-2^\varepsilon$ the strong veri
   I.e., at most a single query was asked for index $i^*$, said query was \emph{not} $m^*$, $w^*\in W'$ and $\wverify(\vec{a},(w^*v^{i^*}_0,w^*v^{i^*}_1),m^*,\allowbreak\vec{\sigma}^*)=1$.
   From this and the definition of $\vec{\sigma}'$ above it follows that
   \begin{align*}
-       \vec{a}^\intercal\cdot(\vec{\sigma}^*-\vec{\sigma}') ={}& \vec{a}^\intercal\vec{\sigma}^*-\vec{a}^\intercal\vec{\sigma}'\\ 
-    ={}& (w^*\cdot v^{i^*}_0 H(m) + w^*\cdot v^{i^*}_1) - \vec{a}^\intercal(w^*\cdot \vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1)\\
-    ={}& (w^*\cdot v^{i^*}_0 H(m) + w^*\cdot v^{i^*}_1) - (w^*\cdot\vec{a}^\intercal\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{a}^\intercal\vec{s}^{i^*}_1)\\
+       \vec{a}^\transpose\cdot(\vec{\sigma}^*-\vec{\sigma}') ={}& \vec{a}^\transpose\vec{\sigma}^*-\vec{a}^\transpose\vec{\sigma}'\\ 
+    ={}& (w^*\cdot v^{i^*}_0 H(m) + w^*\cdot v^{i^*}_1) - \vec{a}^\transpose(w^*\cdot \vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{s}^{i^*}_1)\\
+    ={}& (w^*\cdot v^{i^*}_0 H(m) + w^*\cdot v^{i^*}_1) - (w^*\cdot\vec{a}^\transpose\vec{s}^{i^*}_0\cdot H(m^*)+ w^*\cdot\vec{a}^\transpose\vec{s}^{i^*}_1)\\
     ={}& (w^*\cdot v^{i^*}_0\cdot H(m) + w^*\cdot v^{i^*}_1) - (w^*\cdot v^{i^*}_0\cdot H(m) + w^*\cdot v^{i^*}_1) = 0.
   \end{align*}
   as required for a solution to the SIS problem.
@@ -332,21 +352,23 @@ It thus follows that with probability at least $1-2^\varepsilon$ the strong veri
 \end{proof}
 
 \begin{lemma}\label{lem:keyhidden}
-  Let $n,\otspkkeylen,q',\alpha_H, \delta, \varphi,\secpar$ be positive integers such that $\otspkkeylen\geq((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$ and $\abs{\tern_{\alpha_H}} \leq 2^{2\secpar + \delta}$, let $\ring=\ZZ[x]/(x^n+1)$. Then for any $\vec{a}\in\ring_{q'}^\otspkkeylen$ and uniformly chosen $(\vec{s}_0,\vec{s}_1)\in \ball_{\varphi}^\otspkkeylen \times \ball_{\varphi\alpha_H}^\otspkkeylen$ it holds with probability at least $1-2^{-\lambda}$ that for every $c\in \tern_{\alpha_H}$ there exists $(\vec{s}'_0,\vec{s}'_1)\in \ball_{\varphi}^\otspkkeylen \times \ball_{\varphi\alpha_H}^\otspkkeylen$such that $(\vec{s}'_0,\vec{s}'_1)\neq(\vec{s}_0,\vec{s}_1)$, $(\vec{a}^\intercal\cdot\vec{s}'_0,\vec{a}^\intercal\cdot\vec{s}'_1) = (\vec{a}^\intercal\cdot\vec{s}_0,\vec{a}^\intercal\cdot\vec{s}_1)$ and $\vec{s}'_0\cdot c + \vec{s}'_1 = \vec{s}_0\cdot c + \vec{s}_1$.
+  Let $n,\otspkkeylen,q',\alpha_H, \varphi,\secpar$ be positive integers such that there exists $\delta$ with $\otspkkeylen\geq((3\secpar+\delta)/n+\log_2q)\log^{-1}_2(\varphi+\tfrac{1}{2})$ and $\abs{\tern_{\alpha_H}} \leq 2^{2\secpar + \delta}$, let $\ring_{q'}=\defringqq$.
+  Then for any $\vec{a}\in\ring_{q'}^\otspkkeylen$ and uniformly chosen $(\vec{s}_0,\vec{s}_1)\in \ball{\varphi}{q'}^\otspkkeylen \times \ball{\varphi\alpha_H}{q'}^\otspkkeylen$ it holds with probability at least $1-2^{-\lambda}$ that
+  for every $c\in \tern_{\alpha_H}$ there exists $(\vec{s}'_0,\vec{s}'_1)\in \ball{\varphi}{q'}^\otspkkeylen \times \ball{\varphi\alpha_H}{q'}^\otspkkeylen$such that $(\vec{s}'_0,\vec{s}'_1)\neq(\vec{s}_0,\vec{s}_1)$, $(\vec{a}^\transpose\cdot\vec{s}'_0,\vec{a}^\transpose\cdot\vec{s}'_1) = (\vec{a}^\transpose\cdot\vec{s}_0,\vec{a}^\transpose\cdot\vec{s}_1)$ and $\vec{s}'_0\cdot c + \vec{s}'_1 = \vec{s}_0\cdot c + \vec{s}_1$.
 \end{lemma}
 \begin{proof}
-  We define a function $f_{\vec{a}, c}$ that maps any secret key $(\vec{s}_0, \vec{s}_1)$ to a pair of public key and signature defined as $((\vec{a}^\intercal\cdot\vec{s}_0,\vec{a}^\intercal\cdot\vec{s}_1), \vec{s}_0\cdot c + \vec{s}_1)$.
+  We define a function $f_{\vec{a}, c}$ that maps any secret key $(\vec{s}_0, \vec{s}_1)$ to a pair of public key and signature defined as $((\vec{a}^\transpose\cdot\vec{s}_0,\vec{a}^\transpose\cdot\vec{s}_1), \vec{s}_0\cdot c + \vec{s}_1)$.
   We will show that the domain of this function is at least $2^{3\secpar + \delta}$ times larger than the range.
   The number of possible secret keys is $(2\varphi+1)^{n\otspkkeylen} \cdot (2\varphi\alpha_H+1)^{n\otspkkeylen}$.
   The number of possible signatures is at most $(4\varphi\alpha_H + 1)^{n\otspkkeylen}$.
-  For fixed values $\vec{a}, c, \vec{s}_0\cdot c + \vec{s}_1$, we observe that once $\vec{a}^\intercal\cdot\vec{s}_0$ is fixed, the second component $\vec{a}^\intercal\cdot\vec{s}_1 = \vec{a}^\intercal \cdot ((\vec{s}_0\cdot c + \vec{s}_1) - \vec{s}_0 \cdot c)$ is uniquely determined.
+  For fixed values $\vec{a}, c, \vec{s}_0\cdot c + \vec{s}_1$, we observe that once $\vec{a}^\transpose\cdot\vec{s}_0$ is fixed, the second component $\vec{a}^\transpose\cdot\vec{s}_1 = \vec{a}^\transpose \cdot ((\vec{s}_0\cdot c + \vec{s}_1) - \vec{s}_0 \cdot c)$ is uniquely determined.
   Thus for a fixed signature, there are at most $q'^n$ many possible public keys and therefore the size of the range of $f_{\vec{a}, c}$ is at most $(4 \varphi\alpha_H + 1)^{n\otspkkeylen} \cdot q'^n$.
   We observe that
   \begin{align*}\frac{(2\varphi+1)^{n\otspkkeylen} \cdot (2\varphi\alpha_H+1)^{n\otspkkeylen}}{(4 \varphi\alpha_H + 1)^{n\otspkkeylen} \cdot q'^n}
    \geq{}& \frac{(2\varphi+1)^{n\otspkkeylen} \cdot (2\varphi\alpha_H+1)^{n\otspkkeylen}}{(4 \varphi\alpha_H + 2)^{n\otspkkeylen} \cdot q'^n}\\
    ={}& \frac{(2\varphi+1)^{n\otspkkeylen}}{2^{n\otspkkeylen} \cdot q'^n}\\
    ={}& \left(\varphi+\tfrac{1}{2}\right)^{n\otspkkeylen} \cdot \frac{1}{q'^n}\\
-   ={}& 2^{\log_2(\varphi+\frac{1}{2})\cdot{n\otspkkeylen} - n \log_2 q'}
+   ={}& 2^{\log_2(\varphi+\frac{1}{2})\cdot{n\otspkkeylen} - n \log_2 q'}\enspace.
   \end{align*}
   Using the condition on $\otspkkeylen$ from the lemma statement, one can see that
   \[
@@ -355,13 +377,14 @@ It thus follows that with probability at least $1-2^\varepsilon$ the strong veri
   \]
   and thus, as claimed the domain of $f_{\vec{a},c}$ is at least $2^{3\secpar + \delta}$ times larger than its range.
   
-  Using Lemma 4.1 from~\cite{TCC:LyuMic08}, the probability, over a uniformly chosen secret key, that there exists $(\vec{s}'_0,\vec{s}'_1)\in \ball{1}{q'}^\otspkkeylen \times \ball{\beta_s}{q'}^\otspkkeylen$ such that $(\vec{s}'_0,\vec{s}'_1)\neq(\vec{s}_0,\vec{s}_1)$, $(\vec{a}^\intercal\cdot\vec{s}'_0,\vec{a}^\intercal\cdot\vec{s}'_1) = (\vec{a}^\intercal\cdot\vec{s}_0,\vec{a}^\intercal\cdot\vec{s}_1)$ and $\vec{s}'_0\cdot c + \vec{s}'_1 = \vec{s}_0\cdot c + \vec{s}_1$ is at least $1-2^{-3\secpar-\delta}$.
-  By union bounding over all possible hash values $c \in \tern_{\alpha_H}$ and observing that $\tern_{\alpha_H} \leq 2^{2\secpar + \delta}$ the lemma statement follows.
+  Using Lemma 4.1 from~\cite{TCC:LyuMic08}, the probability, over a uniformly chosen secret key, that there exists $(\vec{s}'_0,\vec{s}'_1)\in \ball{1}{q'}^\otspkkeylen \times \ball{\beta_s}{q'}^\otspkkeylen$ such that $(\vec{s}'_0,\vec{s}'_1)\neq(\vec{s}_0,\vec{s}_1)$, $(\vec{a}^\transpose\cdot\vec{s}'_0,\vec{a}^\transpose\cdot\vec{s}'_1) = (\vec{a}^\transpose\cdot\vec{s}_0,\vec{a}^\transpose\cdot\vec{s}_1)$ and $\vec{s}'_0\cdot c + \vec{s}'_1 = \vec{s}_0\cdot c + \vec{s}_1$ is at least $1-2^{-3\secpar-\delta}$.
+  By union bounding over all possible hash values $c \in \tern_{\alpha_H}$ and observing that $\abs{\tern_{\alpha_H}} \leq 2^{2\secpar + \delta}$ the lemma statement follows.
   \qed
 \end{proof}
 
 \begin{lemma}\label{lem:nilssupportivechildsupport}
-Let $n,\otspkkeylen,q',\alpha_H, \alpha_w$ be positive integers with $q'$ prime and $n$ a power of two such that $q' > 16 \alpha_w \alpha_H\varphi$ and let $\ring=\ZZ[x]/(x^n+1)$. Let $\vec{a}\in\ring_{q'}^\otspkkeylen$, $c_0,c_1 \in \tern_{\alpha_{H}}$, $w_0, w_1 \in \tern_{\alpha_w}$, and $\sigma_0,\sigma_1 \in \ring$ be arbitrary ring elements such that $c_0\neq c_1$ and $w_0 \neq w_1$.
+Let $n,\otspkkeylen,q',\alpha_H, \alpha_w$ be positive integers with $q'$ prime and $n$ a power of two such that $q' > 16 \alpha_w \alpha_H\varphi$ and let $\ring_{q'}=\defringqq$.
+Let $\vec{a}\in\ring_{q'}^\otspkkeylen$, $c_0,c_1 \in \tern_{\alpha_{H}}$, $w_0, w_1 \in \tern_{\alpha_w}$, and $\sigma_0,\sigma_1 \in \ring$ be arbitrary ring elements such that $c_0\neq c_1$ and $w_0 \neq w_1$.
 Then there exists at most a single pair of vectors $(\vec{s}_0,\vec{s}_1)\in\ball{\varphi}{q'}^\otspkkeylen\times \ball{\varphi\alpha_H}{q'}^\otspkkeylen$, such that
     \[
     \vec{s}_0\cdot c_0 + \vec{s}_1 = \sigma_0 \quad\text{and}\quad (w_0 - w_1) \cdot (\vec{s}_0\cdot c_1 + \vec{s}_1) = \sigma_1\enspace.
@@ -375,7 +398,7 @@ Then there exists at most a single pair of vectors $(\vec{s}_0,\vec{s}_1)\in\bal
     and 
     \begin{equation}
     \begin{aligned}
-    &(w_0 - w_1) \cdot (\vec{s}_0\cdot c_1 + \vec{s}_1) = (w_0 - w_1) \cdot (\vec{s}'_0\cdot c_1 + \vec{s}'_1)\\ \implies& (w_0 - w_1)((\vec{s}_0 - \vec{s}'_0)\cdot c_1 + (\vec{s}_1 - \vec{s}'_1)) = 0 \label{kitty}
+    &(w_0 - w_1) \cdot (\vec{s}_0\cdot c_1 + \vec{s}_1) = (w_0 - w_1) \cdot (\vec{s}'_0\cdot c_1 + \vec{s}'_1)\\ \implies& (w_0 - w_1)((\vec{s}_0 - \vec{s}'_0)\cdot c_1 + (\vec{s}_1 - \vec{s}'_1)) = 0\enspace. \label{kitty}
     \end{aligned}
     \end{equation}
     Equation~\ref{hello} implies that 
@@ -384,12 +407,13 @@ Then there exists at most a single pair of vectors $(\vec{s}_0,\vec{s}_1)\in\bal
     \]
     Combined with Equation~\ref{kitty}, we get that in $\ring_{q'}$
     \begin{equation}
-    (w_0 - w_1)(\vec{s}_0 - \vec{s}'_0) (c_0 - c_1)  = 0 \label{herekittykitty}
+    (w_0 - w_1)(\vec{s}_0 - \vec{s}'_0) (c_0 - c_1)  = 0\enspace. \label{herekittykitty}
     \end{equation}
     Since $w_0,w_1\in\tern_{\alpha_w}$, $\vec{s}_0,\vec{s}'_0 \in \ball{\varphi}{q'}^\otspkkeylen$, and $c_0,c_1\in\tern_{\alpha_{H}}$, it holds by \autoref{lem:ternbound} that
     \[
-      \norm{(w_0 - w_1)(\vec{s}_0 - \vec{s}'_0) (c_0 - c_1)} \leq \norm{w_0 - w_1}_1\cdot\norm{c_0 - c_1}_1\cdot \norm{(\vec{s}_0 - \vec{s}'_0)} \leq 8\alpha_w\alpha_H\varphi \leq \tfrac{q'-1}{2}\enspace.
+      \norm{(w_0 - w_1)(\overline{\vec{s}}_0 - \overline{\vec{s}}'_0) (c_0 - c_1)} \leq \norm{w_0 - w_1}_1\cdot\norm{c_0 - c_1}_1\cdot \norm{(\overline{\vec{s}}_0 - \overline{\vec{s}}'_0)} \leq 8\alpha_w\alpha_H\varphi \leq \tfrac{q'-1}{2}\enspace,
     \]
+    where $\overline{\vec{s}}_i\in\ring$ is the representative of $\vec{s}_i\in\ring_{q'}$ with coefficients in $\{-\tfrac{q'-1}{2},\ldots,+\tfrac{q'-1}{2}\}$.
     Therefore \autoref{herekittykitty} also holds in $\ring$.
     Since $w_0 \neq w_1$, $c_0 \neq c_1$, and $\ring$ is an integral domain, it follows that $\vec{s}_0 = \vec{s}'_0$.
     By Equation~\ref{hello}, it must therefore hold that $(\vec{s}_0, \vec{s}_1) = (\vec{s}'_0, \vec{s}'_1)$.
