--- a/commanddefs.tex
+++ b/commanddefs.tex
@@ -99,20 +99,30 @@
 % semantic markup
 \newcommand*{\transpose}{\intercal}
 \newcommand{\interval}[1]{[#1]}
+\newcommand{\errorbound}{\varepsilon}
+\newcommand{\emptylist}{\epsilon}
+\newcommand*{\normalceil}[1]{\lceil #1 \rceil} % almost the same as the standard \ceil, but without \left and \right
 
 \newcommand*{\sisadv}{\overline{\adv}}
 \newcommand*{\sisadvkots}{\overline{\adv}}
 \newcommand*{\hint}{\mathrm{hint}}
 
-\newcommand*{\hvcencoded}{\hvc^{\textrm{Encoded}}}
+\newcommand*{\hvcencoded}{\hvc_{\textup{Encoded}}^{\textup{Chip}}}
+\newcommand*{\hvcplain}{\hvc^{\textup{Chip}}_{0}}
+\newcommand*{\otschip}{\hots^{\textup{Chip}}}
+\newcommand*{\msigchip}{\msig^{\textup{Chip}}}
+
+\newcommand*{\defring}{\ensuremath{\ZZ[X]/\langle X^n + 1\rangle}}
+\newcommand*{\defringq}{\ensuremath{\ZZ_q[X]/\langle X^n + 1\rangle}}
+\newcommand*{\defringqq}{\ensuremath{\ZZ_{q'}[X]/\langle X^n + 1\rangle}}
 
 \newcommand*{\latring}{\Lambda_\ring}
 \newcommand*{\latmodular}{\Lambda_{\ring,q}}
 
 \newcommand*{\kernelbasis}{\mathcal{B}}
 
-\newcommand*{\latencode}{\ensuremath{\mathsf{Encode}_B}}
-\newcommand*{\latdecode}{\ensuremath{\mathsf{Decode}_B}}
+\newcommand*{\latencode}{\ensuremath{\mathsf{Encode}^{\textup{B}}_{\eta,q}}}
+\newcommand*{\latdecode}{\ensuremath{\mathsf{Decode}^{\textup{B}}_{\eta,q}}}
 \newcommand*{\openencode}{\ensuremath{\mathsf{Encode}_{\mathrm{op}}}}
 \newcommand*{\opendecode}{\ensuremath{\mathsf{Decode}_{\mathrm{op}}}}
 \DeclareMathOperator*{\Span}{Span}
