--- a/sections/benchmarks.tex
+++ b/sections/benchmarks.tex
@@ -20,13 +20,13 @@ For convenience, the results of running the script for a range of reasonable inp
   \toprule
    \multicolumn{1}{@{\makebox[3em][r]{\#\space}} c}{Source}&\multicolumn{2}{c}{Constraint}\\
   \midrule
-   \autoref{lem:hvcprobhom}&$\bagg \geq$&$ \eta\sqrt{2\alpha_w\rho(\epsilon + 1 + \log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil + 2\tau))\cdot\ln2}$\\
-   \autoref{lem:kots_correct}& $\beta_\sigma \geq$&$ 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\varepsilon+1+\log_2n\otspkkeylen)\cdot\ln2}$\\
+   \autoref{lem:hvcprobhom}&$\bagg \geq$&$ \eta\sqrt{2\alpha_w\rho(\log_2(\frac{1}{\errorbound}) + 1 + \log_2 n + \log_2(2\tau \lceil\log_{2\eta+1}q\rceil + \xi\lceil\log_{2\eta+1}q'\rceil + 2\tau))\cdot\ln2}$\\
+   \autoref{lem:kots_correct}& $\beta_\sigma \geq$&$ 4\varphi\alpha_H\sqrt{\tfrac{1}{2}\alpha_w\rho(\log_2(\frac{1}{\errorbound})+1+\log_2n\otspkkeylen)\cdot\ln2}$\\
    \autoref{lem:kots_sis}&$\abs{\tern_{\alpha_H}} \geq$&$ 2^{2\secpar}$\\
    \autoref{lem:keyhidden}& $\otspkkeylen\geq$&$((3\secpar+\delta)/n+\log_2q')\log^{-1}_2(\varphi+\tfrac{1}{2})$ \gnote{Fixed $q\rightarrow q'$ here. Please double-check.}\\
    \autoref{lem:keyhidden}& $\abs{\tern_{\alpha_H}} \leq$&$ 2^{2\secpar + \delta}$\\
    \autoref{lem:nilssupportivechildsupport}&$q'>$&$ 16 \alpha_w \alpha_H\varphi$\\
-   \autoref{lem:msigaggcorrect}&$\chi \geq$ &$\secpar/(\varepsilon-1)$\\
+   \autoref{lem:msigaggcorrect}&$\chi \geq$ &$\secpar/\log(\tfrac{1}{2\errorbound})$\\
    \autoref{lem:msigunf}&$\abs{\tern_{\alpha_w}} \geq$&$2^\secpar$
   %\bottomrule
   \end{tabular}
@@ -51,8 +51,8 @@ For convenience, the results of running the script for a range of reasonable inp
                                           & HVC opening   & $(\tau\limbs + \xi\limbs')n \ceil{\log(2\eta+1)}$\\
   \hline                                         
   \multirow{3}{*}{aggregate signatures} & agg.\ KOTS signature & $n \ceil{\log q'}$\\\cline{2-3}
-                                        & agg.\ HVC opening & $(\tau\limbs + \xi\limbs')n\ceil{\log(2\eta+1)} + \tau\limbs n\ceil{\log(\tfrac{\bagg}{\eta}+\tfrac12)}$\\\cline{2-3}
-                                        & index $j$ of aggregation attempt & $\ceil{\log \chi}$\\
+                                        & agg.\ HVC opening & $(\tau\limbs + \xi\limbs')n\ceil{\log(2\eta+1)} + \tau\limbs n\normalceil{\log(\lfloor \tfrac{\bagg}{\eta}\rfloor+ 2)}$\\\cline{2-3}
+                                        & index $j$ of aggregation attempt & $\normalceil{\log \chi}$\\
  \hline
  \end{tabular}
  
